[package]
name = "radians"
version = "0.2.3"
edition = "2021"

description = "A crate for storing angles"
repository = "https://github.com/JoJoJet/radians"
license = "MIT OR Apache-2.0"
keywords = ["angle", "math", "degrees"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
real_float = "0.3"
